--- a/src/app/course/course-list.component.html
+++ b/src/app/course/course-list.component.html
@@ -20,6 +20,7 @@
             <th>Code</th>
             <th>Release Date</th>
             <th>Rating</th>
+            <th>Options</th>
         </tr>
     </thead>
 
@@ -33,7 +34,9 @@
             <td>
               <app-star [rating]="course.rating"> </app-star>
             </td>
-            <td></td>
+            <td>
+              <a [routerLink]="['/courses/info', course.id]" class="btn btn-primary">Edit</a>
+            </td>
         </tr>
 
     </tbody>
